# ninjastorms

./: .gdbinit  .gitignore  AUTHORS  Makefile  Makefile.am  README  README.debug  README.md  THANKS  autogen.sh  boot.cmd  build_toolchain.sh  configure.ac  deploy.sh  qemu-ifdown.sh  qemu-ifup.sh  start_qemu.sh  start_qemu_gdb.sh
include/: errno.h  memory.h  stddef.h  stdio.h  string.h
include/sys/: types.h
kernel/: feedback.h  interrupt.c  interrupt.h  interrupt_handler.S  interrupt_handler.h  link-arm-eabi.ld  main.c  main.h  memory.h  mmio.c  mmio.h  scheduler.c  scheduler.h  swi_handler.c  swi_handler.h  syscall.c  syscall.h  syscall_handler.c  syscall_handler.h  utilities.c  utilities.h
kernel/boot/: start.S
kernel/demo/: demo_led.c  demo_led.h  demo_motor.c  demo_motor.h
kernel/drivers/: adc.c  adc.h  button.c  button.h  gpio.c  gpio.h  led.c  led.h  motor.c  motor.h  pininfo.c  pininfo.h  sensor.c  sensor.h  spi.c  spi.h  timer.c  timer.h
kernel/logger/: logger.c  logger.h
kernel/network/: e1000.c  e1000.h
kernel/pci/: pci.c  pci.h  pci_mmio.c  pci_mmio.h
libc/errno/: errno.c
libc/include/: errno.h  stddef.h  stdio.h  string.h
libc/include/sys/: types.h
libc/stdio/: printf.c  putchar.c  puts.c  vprintf.c
libc/string/: memcmp.c  memcpy.c  memset.c
libp/: adc.c  button.c  button.h  gpio.c  gpio.h  gpio_pins.h  led.c  led.h  motor.c  motor.h  pininfo.c  pininfo.h  sensor.c  sensor.h  spi.c  spi.h
src/: boot.S  demo_led.c  demo_led.h  demo_motor.c  demo_motor.h  ev3ninja.c  ev3ninja.h  feedback.c  feedback.h  interrupt.S  interrupt.c  interrupt.h  interrupt_handler.S  interrupt_handler.h  led.c  led.h  link-arm-eabi.ld  runtime.c  scheduler.c  scheduler.h  segway.c  startup.c  startup.h  stubs.c  u-boot-stubs.c  u-boot.h  util.h
